# Segmentation_Single_Frame

./: CMakeLists.txt  LICENSE  README.md  origin.txt
include/: common.h  depth_segmentation.h
src/: CMakeLists.txt  common.cpp  depth_segmentation.cpp  main.cpp  singleSeg.cpp
